[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/Player/UIBars.png" type="Texture" id=1]
[ext_resource path="res://NiceFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/AbilityButtonQ.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Player/AllMagicianSkills5.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/AllMagicianSkills10.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Ability4-Shield.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/AllMagicianSkills2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/AllMagicianSkills9.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/UIBarUnder.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/UIBarOver.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/UIBarProgress.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/UIBarProgressMana.png" type="Texture" id=12]
[ext_resource path="res://Scripts/AbilityButtonW.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Interface.gd" type="Script" id=14]
[ext_resource path="res://Scripts/AbilityButtonE.gd" type="Script" id=15]
[ext_resource path="res://Scripts/AbilityButtonR.gd" type="Script" id=16]
[ext_resource path="res://Scripts/AbilityButtonD.gd" type="Script" id=17]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="Interface" type="Control"]
margin_left = 435.181
margin_top = 212.358
margin_right = 475.181
margin_bottom = 252.358
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButtonQ" type="TextureButton" parent="."]
margin_left = -350.323
margin_top = 120.194
margin_right = -328.323
margin_bottom = 144.194
texture_normal = ExtResource( 7 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="TextureProgress" parent="AbilityButtonQ"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
margin_left = -1.0
margin_right = 22.0
margin_bottom = 24.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="AbilityButtonQ"]
one_shot = true

[node name="Counter" type="MarginContainer" parent="AbilityButtonQ"]
margin_left = -5.77292
margin_top = -10.7708
margin_right = 23.2271
margin_bottom = 18.2292
theme = SubResource( 1 )
custom_constants/margin_right = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="AbilityButtonQ/Counter"]
margin_left = 5.0
margin_right = 24.0
margin_bottom = 29.0
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0.0
"
align = 2
clip_text = true

[node name="Value2" type="Label" parent="AbilityButtonQ"]
margin_left = 4.6929
margin_top = 16.0327
margin_right = 23.6929
margin_bottom = 45.0327
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Q
"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value3" type="Label" parent="AbilityButtonQ"]
margin_left = -15.3976
margin_top = -9.67937
margin_right = 3.60239
margin_bottom = 19.3206
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.333333, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "2
"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButtonW" type="TextureButton" parent="."]
margin_left = -325.762
margin_top = 120.377
margin_right = -303.762
margin_bottom = 144.377
texture_normal = ExtResource( 8 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="TextureProgress" parent="AbilityButtonW"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
margin_left = -0.803364
margin_top = -0.542515
margin_right = 22.1967
margin_bottom = 23.4575
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="AbilityButtonW"]
one_shot = true

[node name="Counter" type="MarginContainer" parent="AbilityButtonW"]
margin_left = -5.63559
margin_top = -11.4184
margin_right = 23.3644
margin_bottom = 17.5816
theme = SubResource( 1 )
custom_constants/margin_right = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="AbilityButtonW/Counter"]
margin_left = 5.0
margin_right = 24.0
margin_bottom = 29.0
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0.0
"
align = 2
clip_text = true

[node name="Value3" type="Label" parent="AbilityButtonW"]
margin_left = 5.13346
margin_top = 15.6513
margin_right = 24.1335
margin_bottom = 44.6513
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "W

"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value4" type="Label" parent="AbilityButtonW"]
margin_left = -15.1229
margin_top = -9.98035
margin_right = 3.87708
margin_bottom = 35.0197
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.333333, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "5

"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButtonE" type="TextureButton" parent="."]
margin_left = -301.728
margin_top = 119.526
margin_right = -279.728
margin_bottom = 143.526
texture_normal = ExtResource( 5 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value4" type="Label" parent="AbilityButtonE"]
margin_left = 4.51364
margin_top = 15.7086
margin_right = 23.5136
margin_bottom = 60.7086
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "E

"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="TextureProgress" parent="AbilityButtonE"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
margin_left = -1.0
margin_right = 22.0
margin_bottom = 24.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="AbilityButtonE"]
one_shot = true

[node name="Counter" type="MarginContainer" parent="AbilityButtonE"]
margin_left = -5.75339
margin_top = -10.9363
margin_right = 23.2466
margin_bottom = 18.0637
theme = SubResource( 1 )
custom_constants/margin_right = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="AbilityButtonE/Counter"]
margin_left = 5.0
margin_right = 24.0
margin_bottom = 29.0
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0.0
"
align = 2
clip_text = true

[node name="Value5" type="Label" parent="AbilityButtonE"]
margin_left = -15.1471
margin_top = -10.2502
margin_right = 3.85287
margin_bottom = 34.7498
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.333333, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "2

"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButtonR" type="TextureButton" parent="."]
margin_left = -277.719
margin_top = 119.957
margin_right = -255.719
margin_bottom = 143.957
texture_normal = ExtResource( 4 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="TextureProgress" parent="AbilityButtonR"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
margin_left = -1.0
margin_right = 22.0
margin_bottom = 24.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="AbilityButtonR"]
one_shot = true

[node name="Counter" type="MarginContainer" parent="AbilityButtonR"]
margin_left = -5.75365
margin_top = -10.7001
margin_right = 23.2464
margin_bottom = 18.2999
theme = SubResource( 1 )
custom_constants/margin_right = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="AbilityButtonR/Counter"]
margin_left = 5.0
margin_right = 24.0
margin_bottom = 29.0
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0.0
"
align = 2
clip_text = true

[node name="Value5" type="Label" parent="AbilityButtonR"]
margin_left = 5.60541
margin_top = 16.2697
margin_right = 24.6054
margin_bottom = 61.2697
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "R
"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value6" type="Label" parent="AbilityButtonR"]
margin_left = -15.1463
margin_top = -10.3863
margin_right = 3.85367
margin_bottom = 34.6137
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.333333, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "7


"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButtonD" type="TextureButton" parent="."]
margin_left = -254.343
margin_top = 120.01
margin_right = -232.343
margin_bottom = 144.01
texture_normal = ExtResource( 6 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="TextureProgress" parent="AbilityButtonD"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
margin_left = -1.0
margin_right = 22.0
margin_bottom = 24.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="AbilityButtonD"]
one_shot = true

[node name="Counter" type="MarginContainer" parent="AbilityButtonD"]
margin_left = -5.29997
margin_top = -12.2208
margin_right = 23.7
margin_bottom = 16.7792
theme = SubResource( 1 )
custom_constants/margin_right = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="AbilityButtonD/Counter"]
margin_left = 5.0
margin_right = 23.0
margin_bottom = 29.0
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0.0
"
align = 2
clip_text = true

[node name="Value6" type="Label" parent="AbilityButtonD"]
margin_left = 6.1622
margin_top = 15.9194
margin_right = 25.1622
margin_bottom = 60.9194
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "D"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value7" type="Label" parent="AbilityButtonD"]
margin_left = -15.4128
margin_top = -10.2406
margin_right = 3.5872
margin_bottom = 50.7594
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.294118, 0.333333, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3



"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIBars" type="Sprite" parent="."]
position = Vector2( -392.43, 132.195 )
texture = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="UIBars"]
margin_left = -9.99316
margin_top = -8.70276
margin_right = 37.0068
margin_bottom = 29.2972
max_value = 10.0
value = 10.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="TextureProgress" parent="UIBars"]
margin_left = -9.93014
margin_top = 1.79724
margin_right = 37.0699
margin_bottom = 39.7972
max_value = 20.0
value = 20.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="UIBars"]
margin_left = -23.0343
margin_top = -13.3614
margin_right = 16.9657
margin_bottom = 0.638611
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.184314, 0.184314, 0.180392, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaLabel" type="Label" parent="UIBars"]
margin_left = -23.1131
margin_top = -2.3371
margin_right = 16.8869
margin_bottom = 11.6629
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.184314, 0.184314, 0.180392, 1 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="AbilityButtonQ" to="AbilityButtonQ" method="_on_AbilityButton_pressed"]
[connection signal="timeout" from="AbilityButtonQ/Timer" to="AbilityButtonQ" method="_on_Timer_timeout"]
[connection signal="pressed" from="AbilityButtonW" to="AbilityButtonW" method="_on_AbilityButton_pressed"]
[connection signal="timeout" from="AbilityButtonW/Timer" to="AbilityButtonW" method="_on_Timer_timeout"]
[connection signal="pressed" from="AbilityButtonE" to="AbilityButtonE" method="_on_AbilityButton_pressed"]
[connection signal="timeout" from="AbilityButtonE/Timer" to="AbilityButtonE" method="_on_Timer_timeout"]
[connection signal="pressed" from="AbilityButtonR" to="AbilityButtonR" method="_on_AbilityButton_pressed"]
[connection signal="timeout" from="AbilityButtonR/Timer" to="AbilityButtonR" method="_on_Timer_timeout"]
[connection signal="pressed" from="AbilityButtonD" to="AbilityButtonD" method="_on_AbilityButton_pressed"]
[connection signal="timeout" from="AbilityButtonD/Timer" to="AbilityButtonD" method="_on_Timer_timeout"]
